--- a/index.html
+++ b/index.html
@@ -445,7 +445,7 @@
                                     <div class="grid__column-2-4" href="#">
                                         <a href="#" class="home-product-item">
                                             <img src="https://cf.shopee.vn/file/b3cc2b038b79120c43e66b197fb0ad56" alt="" class="home-product-item-img">
-                                            <h4 class="home-product-item__name">Kem Dưỡng Ẩm Tối Ưu Hada Labo Advanced Nourish Cream 50g</h4>
+                                            <h4 class="home-product-item__name">Kem  50g</h4>
                                             <div class="home-product-item__price">
                                                 <span class="home-product-item__price-old">1.200.000đ</span>
                                                 <span class="home-product-item__price-current">999.000đ</span>
