--- a/index.html
+++ b/index.html
@@ -1035,13 +1035,13 @@
                         <div class="col l-2-4 m-4 c-12">
                             <h3 class="footer__heading">Vào cửa hàng trên ứng dụng</h3>
                             <div class="footer__download">
-                                <img src="/assets/img/qr_code.png" alt="Downlaod QR" class="footer__download-qr">
+                                <img src="/assets/img/qr_code.png" alt="Download QR" class="footer__download-qr">
                                 <div class="footer__download-apps">
                                     <a href="" class="footer__download-app-link">
-                                        <img src="/assets/img/google_play.png" alt="Google Play" class="footer__donwload-app-img">
+                                        <img src="/assets/img/google_play.png" alt="Google Play" class="footer__download-app-img">
                                     </a>
                                     <a href="" class="footer__download-app-link">
-                                        <img src="/assets/img/appstore.png" alt="Appstore" class="footer__donwload-app-img">
+                                        <img src="/assets/img/appstore.png" alt="Appstore" class="footer__download-app-img">
                                     </a>
                                 </div>
                             </div>
